fixed intro image and quote to be responsive on mobile.

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ ul li a {
     border: #B0CDB6 8px dotted;
     width: 55%;
     height: 35%;
-    font-size: 5rem;
+    font-size: 4vw;
     display: inline-block;
     text-align: center;
     line-height: 1.2;
